[package]
name = "hgit"
version = "0.1.0"
authors = ["Sash Zats <sash@zats.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
git2 = "0.13"
uuid = { version = "0.8.2", features = ["v4"] }
tempdir = "0.3.7"
